Fixed unmodifiable List in ExtractionStrategy when modification is necessary